--- a/index.css
+++ b/index.css
@@ -1,3 +1,120 @@
 body {
-    
-}
+    background-color: #F8F6F0;
+    font-family: 'Sofia Sans', sans-serif;
+    color: #212121;
+  }
+  
+  ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden
+  }
+  
+  ul.topnav a {float: right;}
+  
+  ul.topnav a.right {float: right;}
+  
+  ul.topnav a.nav-brand {
+    float: left;
+    color: #be3455;
+    font-weight: bold;
+    font-size: 2rem
+  }
+  
+  ul.topnav a.active {
+    color: #be3455;
+    text-decoration: underline
+  }
+  
+  ul.topnav li a {
+    display: block;
+    color: #212121;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 1.5rem
+  }
+  
+  ul.topnav li a.active:hover {
+    color: #d9627e
+  }
+  
+  ul.topnav li a.nav-brand:hover {
+    color: #d9627e 
+  }
+  
+  ul.topnav li a.right:hover {
+    color: #d9627e
+  }
+  
+  .picture {
+    width: 300px;
+    border: 1px solid #F8F6F0;
+    border-radius: 10px;
+    cursor: pointer;
+    object-fit: contain;
+    aspect-ratio: 1;
+  }
+  
+  /* shrink image on hover */
+  .picture:hover {
+    filter: brightness(80%);
+    transform: scale(0.97);
+    transition: 0.3s
+  }
+  
+  .header {
+    color: #be3455;
+  }
+  
+  .header:hover {
+    color:#F8F6F0;
+    background-color: #be3455;
+    transition: 0.4s;
+  }
+  
+  .picture-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: auto;
+    gap: 16px;
+  }
+  
+  .image-title {
+    text-align: center;
+    font-family: monospace;
+    font-size: 1.5rem;
+    background-color: #be3455;
+    color: #F8F6F0
+  }
+  
+  .intro {
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  .page-container {
+    width: 80%;
+    margin: auto;
+    margin-top: 5rem
+  }
+  
+  .chunk-container {
+    width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  .chunk-box {
+    margin-left: 2rem;
+    margin-right: 1rem;
+  }
+  
+  .footer {
+    width: 80%;
+    font-family: monospace;
+    margin: auto;
+    margin-top: 4rem;
+    text-align:center  
+  }
