edit background color

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F8F6F0;
+    background-color: white;
     font-family: 'Sofia Sans', sans-serif;
     color: #212121;
   }
