--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -13,7 +13,7 @@
   --secondary-shadow: #a17a69;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
-  --line-height: 1.7rem;
+  --line-height: 1.8rem;
   --transition: 0.3s;
 }
 
@@ -35,6 +35,11 @@ ul {
 a {
   text-decoration: none;
   color: var(--primary-color);
+}
+
+h2 {
+  text-decoration: 3.5px underline #d3cbf5;
+  text-underline-offset: 5px;
 }
 
 body {
@@ -100,17 +105,10 @@ nav a.home-item {
 
 nav a.home-item:hover {
   color: #d3cbf5;
-  transition: 300ms ease-in-out;
-  transform-origin: 0% 50%;
 }
 
 ul.nav-bar li a.active {
-  color: #a9324e;
-  border-bottom: solid 3px #a9324e;
-}
-
-ul.nav-bar li a.active:hover {
-  color: #d9627e;
+  color: #d3cbf5;  
 }
 
 .nav-bar li a:hover {
@@ -119,60 +117,156 @@ ul.nav-bar li a.active:hover {
 }
 
 .nav-bar li a:hover:after {
-    transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 .nav-bar li a::after {
-    display:block;
-    content: '';
-    border-bottom: solid 3px #d3cbf5;  
-    transform: scaleX(0);  
-    transition: 350ms ease-in-out;
-    transform-origin: 0% 50%;
+  display:block;
+  content: '';
+  border-bottom: solid 3px #d3cbf5;  
+  transform: scaleX(0);  
+  transition: 350ms ease-in-out;
+  transform-origin: 0% 50%;
 }
 
 /* Hero */
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    max-width: 75vw;
-    margin: 2rem;
-  }
-  
-  .hero img {
-    height: 25rem;
-    border-radius: 10%;
-  }
+  max-width: 70rem;
+  margin-top: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero img {
+  height: 25rem;
+  border-radius: 2rem;
+}
 
 .bio {
-    width: 25rem;
-    padding: 0.625rem;
-    border-radius: 6px;
-    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
-}
-
-.bio h1 {
-    margin-bottom: var(--bottom-margin);
-}
-
-.bio p {
-    line-height: var(--line-height);
-    padding: 0.3rem 0;
+  width: 45%;
+  padding: 0rem 3rem;
 }
 
 .bio-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+  display: flex;
+  padding: 2rem 0rem;
 }
+
+.hero h1 {
+  margin-bottom: var(--bottom-margin);
+}
+
+.hero h2 {
+  margin-bottom: var(--bottom-margin-2);
+}
+
+.bio p {
+  line-height: var(--line-height);
+  margin-bottom: var(--bottom-margin-2);
+  padding: 0.3rem 0;
+}
+
+button {
+  background-color: #d3cbf5;
+  border: none;
+  border-radius: 2rem;
+  padding: 8px 32px;
+  cursor: pointer;
+  font-size: 16;
+}
+
+button:hover {
+  background-color: #b6a8f3;
+} 
+
+.grid-container {
+  display: grid;
+  gap: 10px;
+  max-width: 70rem;
+  grid-template-columns: 20rem 45rem;
+  align-items: baseline;
+}
+
+.bio-list {
+  margin-bottom: 5rem;
+}
+
+.bio-grid h3 {
+  margin-bottom: 2rem;
+}
+
+.bio-list li {
+  line-height: var(--line-height);
+}
+
+.bio-list a.link {
+  text-decoration: underline;
+  margin-bottom: var(--bottom-margin);
+}
+/* Hero 
+.hero {
+  max-width: 70rem;
+  width: 100%;
+  flex-direction: column;
+  flex: 1 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  position: relative;
+}
+
+.hero img {
+  height: 25rem;
+  border-radius: 2rem;
+}
+
+.bio {
+  width: 45%;
+  padding: 3rem;
+  border-radius: 2rem;
+  border: 1px solid #ebeef2;
+}
+
+.hero h1 {
+  margin-bottom: var(--bottom-margin);
+}
+
+.hero h2 {
+  margin-bottom: var(--bottom-margin-2);
+}
+
+.bio p {
+  line-height: var(--line-height);
+  padding: 0.3rem 0;
+}
+
+.bio-container {
+  max-width: 68.75rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  margin: 2rem;
+}
+
+button {
+  background-color: #d3cbf5;
+  border: none;
+  border-radius: 2rem;
+  padding: 8px 32px;
+  cursor: pointer;
+  font-size: 16;
+}
+
+button:hover {
+  background-color: #f3cbf5;
+} */
 
 /* Footer */
 footer {
   background-color: var(--bg-color);
   padding: 1.25rem;
-  position: fixed;
+  /*position: relative;
+  position: fixed; */
   left: 0;
   bottom: 0;
   width: 100%;
