--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@
   --secondary-shadow: #a17a69;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
+  --bottom-margin-3: 2rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
 }
@@ -39,6 +40,7 @@ a {
 
 h2 {
   color: #d3cbf5;
+  margin-bottom: var(--bottom-margin-2);
 }
 
 body {
@@ -107,26 +109,40 @@ ul.nav-bar li a.active {
   border-bottom: solid 3px #d3cbf5;  
 }
 
-ul.nav-bar li a.active:hover {
-  color: #f3cbf5;  
+/* 
+   underline hover left to right
+   source: https://averyykyler.medium.com/left-to-right-underline-effect-using-css-e9aa2c5dea1e 
+*/ 
+ul.nav-bar li a {
+  text-decoration: none;
+  position: relative;
+  width: fit-content;
+  block-size: fit-content; 
+  margin-bottom: var(--bottom-margin);
 }
 
-.nav-bar li a:hover {
-	color: #2a2d34;
-	transition: 0.5s;
+ul.nav-bar li a::before, ul.nav-bar li a::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  border-top-width: 3.5px;
+  border-top-color: #d3cbf5;
+} 
+
+ul.nav-bar li a::before {
+  width: 100%;
 }
 
-.nav-bar li a:hover:after {
-  transform: scaleX(1);
+ul.nav-bar li a::after {
+  border-top-style: solid;
+  width: 0;
+  transition: width .2s ease;
 }
 
-.nav-bar li a::after {
-  display:block;
-  content: '';
-  border-bottom: solid 3px #d3cbf5;  
-  transform: scaleX(0);  
-  transition: 350ms ease-in-out;
-  transform-origin: 0% 50%;
+ul.nav-bar li a:hover::after {
+  width: 100%;
+  transition: 0.5s; 
 }
 
 /* Hero */
@@ -142,31 +158,103 @@ ul.nav-bar li a.active:hover {
   align-items: center;
   justify-content: center;
   gap: 5rem;
-  /*
-  gap: 2.5rem;
-  max-width: 68.75rem;
-  margin: 2rem; */
 }
 
 .hero img {
-  height: 20rem;
-  border-radius: 10%;
+  height: 25rem;
+  border-radius: 2rem;
+}
+
+/* typing carousel */
+.typing-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.input-cursor {
+  display: inline-block;
+  width: 2px;
+  height: 42px;
+  background-color: white;
+  margin-left: 8px;
+  animation: blink .6s linear infinite alternate;
+}
+
+@keyframes blink {
+  0% {opacity: 1;}
+  40% {opacity: 1;}
+  60% {opacity: 0;}
+  100% {opacity: 0;}
+}
+
+.input-cursor { 
+animation: blink .6s linear infinite alternate;
 }
 
 .bio {
-  width: 25rem;
-  padding: 0.625rem;
-  border-radius: 6px;
-  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+  width: 45%;
+  padding: 0rem 3rem;
 }
 
-.bio h1 {
+.bio-container {
+  display: flex;
+  padding: 2rem 0rem;
+}
+
+.hero h1 {
   margin-bottom: var(--bottom-margin);
+}
+
+.hero h2 {
+  margin-bottom: var(--bottom-margin-2);
 }
 
 .bio p {
   line-height: var(--line-height);
+  margin-bottom: var(--bottom-margin-2);
   padding: 0.3rem 0;
+}
+
+button {
+  border: 1px solid #b3b3b3;
+  background-color: var(--bg-color);
+  color: #a786db;
+  border-radius: 2rem;
+  padding: 8px 32px;
+  cursor: pointer;
+  font-size: 16;
+}
+
+button:hover {
+  border: 1px solid #d3cbf5;
+  background-color: #d3cbf5;
+  transition: 0.4s;
+} 
+
+.grid-container {
+  display: grid;
+  gap: 10px;
+  max-width: 70rem;
+  grid-template-columns: 20rem 45rem;
+  align-items: baseline;
+}
+
+.bio-list {
+  margin-bottom: 5rem;
+}
+
+.bio-grid h3 {
+  margin-bottom: 2rem;
+}
+
+.bio-list li {
+  line-height: var(--line-height);
+  margin: 10px 0;
+}
+
+.bio-list a.link {
+  text-decoration: underline;
+  margin-bottom: var(--bottom-margin);
 }
 
 .scroll-down {
@@ -181,7 +269,6 @@ ul.nav-bar li a.active:hover {
 .scroll-down:hover {
   color: #8b8eaf;
 }
-
 
 /* Projects */
 .projects {
@@ -210,18 +297,19 @@ ul.nav-bar li a.active:hover {
   padding: 5.5rem 0;
 }
 
-/* underline hover left to right reference from: 
-https://averyykyler.medium.com/left-to-right-underline-effect-using-css-e9aa2c5dea1e 
+/* 
+   underline hover left to right
+   source: https://averyykyler.medium.com/left-to-right-underline-effect-using-css-e9aa2c5dea1e 
 */ 
-.project-sponsor {
+.project-title {
   text-decoration: none;
   position: relative;
   width: fit-content;
   block-size: fit-content; 
-  margin-bottom: var(--bottom-margin);
+  margin-bottom: var(--bottom-margin-3);
 }
 
-.project-sponsor::before, .project-sponsor::after {
+.project-title::before, .project-title::after {
   content: "";
   position: absolute;
   bottom: -3px;
@@ -230,22 +318,22 @@ https://averyykyler.medium.com/left-to-right-underline-effect-using-css-e9aa2c5d
   border-top-color: #d3cbf5;
 } 
 
-.project-sponsor::before {
+.project-title::before {
   width: 100%;
 }
 
-.project-sponsor::after {
+.project-title::after {
   border-top-style: solid;
   width: 0;
   transition: width .2s ease;
 }
 
-.project-sponsor:hover::after {
+.project-title:hover::after {
   width: 100%;
   transition: 0.5s; 
 }
 
-.project-type {
+.project-sponsor {
   margin-bottom: var(--bottom-margin-2);
   line-height: var(--line-height);
 }
@@ -256,8 +344,9 @@ https://averyykyler.medium.com/left-to-right-underline-effect-using-css-e9aa2c5d
 }
 
 button {
-  background-color: #d3cbf5;
-  border: none;
+  border: 1px solid #b3b3b3;
+  background-color: var(--bg-color);
+  color: #a786db;
   border-radius: 2rem;
   padding: 8px 32px;
   cursor: pointer;
@@ -265,7 +354,9 @@ button {
 }
 
 button:hover {
-  background-color: #b6a8f3;
+  border: 1px solid #d3cbf5;
+  background-color: #d3cbf5;
+  transition: 0.4s;
 } 
 
 /* Projects 
@@ -392,6 +483,10 @@ i.scroll-up:hover {
 }
 
 
+
+
+
+
 /*
 
 body {
@@ -421,6 +516,49 @@ nav div {
 .nav-item:first-child {
 	float: left;
 	font-weight: 500;
+}
+
+*/
+
+/* Hero 
+
+.hero {
+  max-width: 70rem;
+  margin-top: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  /*
+  gap: 2.5rem;
+  max-width: 68.75rem;
+  margin: 2rem; --
+}
+
+.hero img {
+  height: 20rem;
+  border-radius: 10%;
+}
+
+.bio {
+  width: 25rem;
+  padding: 0.625rem;
+  border-radius: 6px;
+  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+}
+
+.bio h1 {
+  margin-bottom: var(--bottom-margin);
+}
+
+.bio p {
+  line-height: var(--line-height);
+  padding: 0.3rem 0;
 }
 
 */
