--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Sans+Mono:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 
 /* Variables */
 :root {
-  --font-family: "Roboto", sans-serf;
+  --font-family: "Noto Sans", sans-serif;
+  --headline-font-family: "Sofia Sans", sans-serif;
+  --secondary-font-family: "Noto Sans Mono", sans-serif;
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 900;
-  --bg-color: #fcfcfc;
+  /* --bg-color: #fcfcfc; */
+  --bg-color: #fafafa;
   --primary-color: #2a2d34;
   --secondary-color: #ff7235;
   --primary-shadow: #8b8eaf;
@@ -22,7 +27,7 @@ html {
   scroll-behavior: smooth;
 }
 
-/* CSS Resets */
+/* --------------------------------------------- CSS RESETS --------------------------------------------------------------------*/
 * {
   margin: 0;
   padding: 0;
@@ -39,27 +44,48 @@ a {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 55px;
   color: #d3cbf5;
   margin-bottom: var(--bottom-margin-2);
+  font-family: var(--headline-font-family);
 }
 
 h2 {
   font-size: 40px;
-  color: #d3cbf5;
   margin-bottom: var(--bottom-margin-2);
+  font-family: var(--headline-font-family);
 }
 
 h3 {
-  font-size: 28px;
+  font-size: 26px;
+  font-family: var(--headline-font-family);
+  margin-bottom: var(--bottom-margin-2);
 }
 
 p {
   font-size: 1em;
+  line-height: var(--line-height);
+}
+
+h3.secondary {
+  font-family: var(--secondary-font-family);
+  color:#b3b3b3;
+  margin-bottom: var(--bottom-margin-3);
+} 
+
+p.secondary {
+  font-family: var(--secondary-font-family);
+  color:#b3b3b3;
+  margin-bottom: var(--bottom-margin);
+}
+
+span.markup {
+  background-color: #F5EFFF;
 }
 
 body {
   font-family: var(--font-family);
+  /*font-family: monospace;*/
 }
 
 html {
@@ -74,7 +100,7 @@ a {
   text-decoration: none;
 }
 
-/* Nav bar */
+/* --------------------------------------------- NAV BAR ----------------------------------------------------------------------------*/
 nav {
   position: sticky;
   top: 0;
@@ -160,17 +186,22 @@ ul.nav-bar li a:hover::after {
   transition: 0.5s; 
 }
 
-/* Hero */
+/* --------------------------------------------- HERO -----------------------------------------------------------------------------*/
 .hero {
   max-width: 70%;
-  margin-top: 3rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 3rem auto;
   width: 100%;
-  margin-bottom: 3rem;
+}
+
+.home-page {
+  height: 80vh;
 }
 
 .hero-container {
+  margin: 5rem auto 3rem;
+}
+
+.hero-container.hello {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -217,6 +248,7 @@ ul.nav-bar li a:hover::after {
   align-items: center;
   width: 55%;
   padding: 0rem 3rem;
+  gap: 1rem;
 }
 
 .bio {
@@ -258,6 +290,7 @@ button {
   cursor: pointer;
   font-size: 16px;
   max-width:15em;
+  font-family: var(--font-family);
 }
 
 button:hover {
@@ -315,7 +348,8 @@ button:hover {
   font-size: x-large;
   justify-content: center;
   width: 100%;
-  padding-top: 4rem;
+  margin: 3rem auto;
+  padding-top: 3rem;
   padding-bottom: 5rem;
 }
 
@@ -323,21 +357,19 @@ button:hover {
   color: #8b8eaf;
 }
 
-/* Projects */
+/* --------------------------------------------- PROJECTS --------------------------------------------------------------------*/
 .projects {
   background-color: var(--bg-color);
-  padding: 7rem 15%;
-  margin-top: 3rem;
+  margin: 3rem auto;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 7rem 15% 3rem;
 }
 
 .project-container {
   display: flex;
   padding: 2rem 0rem;
   gap: 5rem;
-  margin-top: 3rem;
+  margin: 3rem auto;
 }
 
 .project-img {
@@ -366,6 +398,13 @@ button:hover {
   block-size: fit-content; 
 }
 
+.project-img:hover {
+  filter: brightness(90%);
+  transform: scale(0.97);
+  transition: 0.3s
+}
+
+/* Hover
 .project-title::before, .project-title::after {
   content: "";
   position: absolute;
@@ -389,6 +428,7 @@ button:hover {
   width: 100%;
   transition: 0.5s; 
 }
+*/
 
 .project-sponsor {
   line-height: var(--line-height);
@@ -466,7 +506,7 @@ button .button:hover {
 
 */
 
-/* Password */
+/* --------------------------------- PASSWORD PROTECTED CASE STUDY --------------------------------------------------------------------*/
 div.password-protected-content h2 {
   color: #2a2d34;
 }
@@ -545,16 +585,14 @@ i.close-overlay:hover {
   color: #8b8eaf;
 }
 
-/* Design Philosophy */
+/* --------------------------------------------- DESIGN PHILOSOPHY --------------------------------------------------------------------*/
 .design-philosophy {
   max-width: 70%;
-  margin-top: 3rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 3rem auto;
   width: 100%;
 }
 
-/* Footer */
+/* --------------------------------------------- FOOTER --------------------------------------------------------------------*/
 footer {
   background-color: var(--bg-color);
   padding: 1.25rem;
@@ -563,7 +601,7 @@ footer {
   margin: 2rem 0 0;
 }
 
-footer .copy {
+footer .footer-copy {
   color:#b3b3b3;
   margin: auto;
 }
@@ -594,17 +632,348 @@ i.scroll-up:hover {
   color: #8b8eaf;
 }
 
-/* Case Studies */
-.project-context {
-  margin-top: 3rem;
-  margin-left: auto;
-  margin-right: auto;
+/* --------------------------------------------- CASE STUDIES --------------------------------------------------------------------*/
+/* -- UW CERSE -- */
+/* overview section */
+.overview {
+  max-width: 70%;
+  margin: 3rem auto 1.5rem;
+  width: 100%;
+}
+
+.project-context-container {
+  margin: 3rem auto;
   display: flex;
-  gap: 15rem;
+  /* padding: 0 2rem; */
+  /* gap: 15rem; */
+}
+
+.project-context {
+  width: 33.33%;
 }
 
 
-/* Responsive Layout */
+
+h1.case-study-title {
+  color: #d3cbf5;
+  margin-bottom: 0;
+}
+
+.project-overview {
+  display: flex;
+  gap: 5em;
+  margin: 3rem auto;
+  align-items: center;
+}
+
+.lsamp-image {
+  border-radius: 7px;
+}
+
+p.image-caption {
+  color: #b3b3b3;
+  font-style:italic;
+  font-weight: 300;
+  font-size: smaller;
+  line-height: normal;
+  text-align: center;
+}
+
+.design-question {
+  margin: 3rem auto;
+}
+
+.design-q {
+  font-size: 26px;
+  line-height:1.7em;
+}
+
+.final-deliverable {
+  margin: 3rem auto;
+}
+
+.deliverable-container {
+  display: grid;
+  gap: 4.5rem;
+  /* max-width: 70rem; */
+  grid-template-columns: 45% 45%;
+  margin: 0rem auto 3rem;
+  align-items: center;
+}
+
+.video-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+iframe {
+  border: none;
+}
+
+/* discovery section */
+.discovery {
+  margin: 1.5rem auto 3rem;
+  width: 100%;
+  padding: 3rem 15%;
+  background-color: var(--bg-color); 
+}
+
+.research-goals-list {
+  margin: 0rem auto 3rem;
+  display: flex;
+  gap: 5rem;
+}
+
+.research-goal {
+  width: 33.33%
+}
+
+.two-column {
+  margin: 3rem auto;
+  display: flex;
+  gap: 5rem;
+}
+
+.no-bottom-margin {
+  margin: 3rem auto 0rem;
+  display: flex;
+  gap: 5rem;
+  border-bottom: none;
+}
+
+.column-header {
+  font-size: 18px;
+  font-weight: var(--bold-font);
+  margin-bottom: 0.5rem;
+}
+
+.two-img-container {
+  display: flex;
+  margin: 3rem auto;
+  justify-content: space-evenly;
+}
+
+/* flip image
+Source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_flip_image2 */
+.flip-image {
+  background-color: transparent;
+  /* border: 1px solid #f1f1f1; */
+  width: 600px;
+  height: 375px;
+  /* perspective: 1000px; */
+}
+
+.flip-image-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-image:hover .flip-image-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-image-front {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  width: inherit;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.flip-image-back {
+  padding: 2rem;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/* .flip-image-front {
+  background-color: #bbb;
+  color: black;
+} */
+
+.flip-image-back {
+  background-color: #555;
+  color: white;
+  transform: rotateY(180deg);
+  border-radius: 2ch;
+  width: 500px;
+  height: 375px;
+}
+
+.interview {
+  width: 400px;
+  height: 420px;
+}
+
+.interview-image {
+  width: auto;
+  height: 400px;
+  border-radius: 1ch;
+}
+
+div.column {
+  width: 50%;
+}
+
+/* bento box
+Source: https://codepen.io/stoumann/pen/GRzWVjZ
+*/
+.bento-box {
+  display: grid;
+  gap: 2ch;
+  margin: 3rem auto;
+  & > * {
+    background: var(--bg, #f7f6f6);
+    border-radius: 2ch;
+    color: hsl(215, 75%, 10%);
+    container-type: inline-size;
+    grid-column: var(--gc, auto);
+    grid-row: var(--gr, auto);
+    padding: 2ch;
+    & h2 {
+      margin-block: 0 1ch;
+    }
+  }
+}
+
+.survey-image {
+  border-radius: 1ch;
+  object-fit: contain;
+}
+
+.bento {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bento-hotdog {
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+}
+
+.bento-hamburger {
+  width: 100%;
+  height: 370px;
+}
+
+.hotdog {
+  height: 95%;
+  /* width: 95%; */
+}
+
+.hamburger {
+  /* min-height: 60%; */
+  width: 95%; 
+  /* height: 95%; */
+}
+
+div.div {
+  margin: 3rem auto;
+}
+
+.competitive-analysis-container {
+  margin: 3rem auto;
+  display: flex;
+  justify-content: center;
+}
+
+.competitive-analysis-image {
+  width: 600px;
+  height: auto;
+  border-radius: 7%;
+}
+
+.comp-analysis {
+  width: 600px;
+  height: 425px;
+}
+
+/* responsive bento box */
+@media (min-width: 768px) {
+  .bento-box { grid-template-columns: repeat(7, 1fr); }
+  .bb3 { --gc: span 4; --gr: span 2; }
+  .bb4 { --gc: span 3; --gr: span 2; }
+  .bb1 { --gc: span 3; --gr: span 2; }
+  .bb2 { --gc: span 4; --gr: span 2; }
+  /* .bento-hotdog {height: 370px;}
+  .bento-hamburger {height: 370px}
+  .hotdog {width: 340px;}
+  .hamburger {width: 470px;} */
+
+  /* .deliverable-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  } */
+}
+
+/* findings section */
+.findings {
+  max-width: 70%;
+  margin: 3rem auto;
+  width: 100%;
+}
+
+.findings-recommendations-grid {
+  margin: 3rem auto;
+}
+
+.findings-container, .recommendations-container {
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 2px dashed #b3b3b3;
+}
+
+.findings-recommendations-container {
+  display: flex;
+  gap: 5rem;
+}
+
+.no-bottom-border {
+  border-bottom: none;
+  /* padding-bottom: 0; */
+  margin-bottom: 0;
+}
+
+/* ideation section */
+.ideation {
+  max-width: 70%;
+  margin: 3rem auto;
+  width: 100%;
+}
+
+/* iteration section */
+.iteration {
+  max-width: 70%;
+  margin: 3rem auto;
+  width: 100%;
+}
+
+/* reflection section */
+.reflection-next-steps {
+  max-width: 70%;
+  margin: 3rem auto;
+  width: 100%;
+}
+
+
+/* --------------------------------------------- RESPONSIVE LAYOUT --------------------------------------------------------------------*/
 @media screen and (max-width: 720px) {
   nav {
     padding: 1.5rem 1.5rem;
